Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-47941

winrt: MessageDialogs signals not fired.

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.6.0
    • 5.6
    • None
    • Qt 5.6
      Windows Phone 8.1
    • WinRT
    • 8c1fcbcd83214d7cc7efc63c12f907538664821e

    Description

      Steps:
      1. Run system dialog's example on windows phone
      2. Select Message tab.
      3. Press open.
      4. Dismiss dialog
      Expected: System output to print "qml: clicked button 1024" and visibility of the dialog set to false

      Actual: No print, dialog remains visible and system out prints:
      QObject::connect: Cannot queue arguments of type 'QPlatformDialogHelper::StandardButton'
      (Make sure 'QPlatformDialogHelper::StandardButton' is registered using qRegisterMetaType().)

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            samuelnevala Samuel Nevala
            samuelnevala Samuel Nevala
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes